Bug 1022607 - Only cache the response when the readyState is DONE. r=bent, a=lmandel